cmake_minimum_required(VERSION 3.28)
project(laborator3DSA)

set(CMAKE_CXX_STANDARD 17)

add_executable(laborator3DSA
        App.cpp
        SortedBagIterator.h
        SortedBagIterator.cpp
        SortedBag.cpp
        ShortTest.h
        ShortTest.cpp
        ExtendedTest.h
        ExtendedTest.cpp
        ExtendedTest.cpp)
