cmake_minimum_required(VERSION 3.28)
project(laborator4dsa)

set(CMAKE_CXX_STANDARD 17)

add_executable(laborator4dsa
        App.cpp
        ExtendedTest.cpp
        ExtendedTest.h
        MultiMap.cpp
        MultiMap.h
        MultiMapIterator.cpp
        MultiMapIterator.h
        ShortTest.cpp
        ShortTest.h)
